--- a/Frontend/inventory.html
+++ b/Frontend/inventory.html
@@ -2,52 +2,101 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inventory</title>
-  <link rel="stylesheet" href="CSS/STYLE.CSS" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Inventory List</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Inventory</h1>
-    <button id="showInventoryFormBtn" class="btn btn-success">+ Add New Inventory Item</button>
-    <table id="inventoryTable" class="table" style="width: 100%; margin-top: 20px;">
-      <thead>
-        <tr>
-          <th>Inventory ID</th>
-          <th>Item Name</th>
-          <th>Quantity</th>
-          <th>Supplier ID</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
 
-  <div id="inventoryFormSection" class="d-none">
-    <form id="inventoryForm">
-      <h2 id="inventoryFormTitle">Insert Inventory Item</h2>
-      <div class="row">
-        <div class="col">
-          <label>Item Name</label>
-          <input type="text" id="item_name" class="form-control" required />
-        </div>
-        <div class="col">
-          <label>Quantity</label>
-          <input type="number" id="quantity" class="form-control" required />
-        </div>
-        <div class="col">
-          <label>Supplier ID</label>
-          <input type="number" id="supplier_id" class="form-control" required />
-        </div>
-      </div>
-      <br/>
-      <div class="text-center">
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <button type="button" id="cancelInventoryFormBtn" class="btn btn-secondary">Cancel</button>
-      </div>
-    </form>
-  </div>
+  <h1>Inventory List</h1>
 
-  <script src="JS/inventory.js"></script>
+  <form id="addInventoryForm" onsubmit="addNewInventory(event)">
+    <input type="text" id="ItemName" placeholder="Item Name" required />
+    <input type="number" id="Quantity" placeholder="Quantity" required />
+    <input type="number" id="SupplierID" placeholder="Supplier ID" required />
+    <button type="submit">Add</button>
+  </form>
+
+  <div id="loading" class="loading">Loading Data...</div>
+  <div id="error" class="error" style="display:none;"></div>
+
+  <table id="inventoryTable" style="display:none;">
+    <thead>
+      <tr>
+        <th>Inventory ID</th>
+        <th>Item Name</th>
+        <th>Quantity</th>
+        <th>Supplier ID</th>
+      </tr>
+    </thead>
+    <tbody id="inventoryBody"></tbody>
+  </table>
+
+  <script>
+    const getInventoryAPI = "https://musical-robot-q7xpp4j9xjwxc4gjj-5000.app.github.dev/getData/inventory";
+
+    async function fetchInventory() {
+      const loadingEl = document.getElementById('loading');
+      const errorEl = document.getElementById('error');
+      const table = document.getElementById('inventoryTable');
+      const tbody = document.getElementById('inventoryBody');
+
+      try {
+        loadingEl.style.display = 'block';
+        errorEl.style.display = 'none';
+        table.style.display = 'none';
+
+        const response = await fetch(getInventoryAPI);
+        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+
+        const data = await response.json();
+        tbody.innerHTML = '';
+
+        data.forEach(row => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${row.id}</td>
+            <td>${row.item_name}</td>
+            <td>${row.quantity}</td>
+            <td>${row.supplier_id}</td>
+          `;
+          tbody.appendChild(tr);
+        });
+
+        loadingEl.style.display = 'none';
+        table.style.display = 'table';
+      } catch (err) {
+        loadingEl.style.display = 'none';
+        errorEl.style.display = 'block';
+        errorEl.textContent = 'Failed to load inventory: ' + err.message;
+      }
+    }
+
+    fetchInventory();
+
+    async function addNewInventory(event) {
+      event.preventDefault();
+
+      const item_name = document.getElementById('ItemName').value;
+      const quantity = document.getElementById('Quantity').value;
+      const supplier_id = document.getElementById('SupplierID').value;
+
+      try {
+        await fetch('https://musical-robot-q7xpp4j9xjwxc4gjj-5000.app.github.dev/addInventory', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ item_name, quantity, supplier_id })
+        });
+
+        fetchInventory();
+        document.getElementById('addInventoryForm').reset();
+      } catch (err) {
+        console.error("Error adding inventory:", err);
+      }
+    }
+  </script>
+
 </body>
 </html>
