--- a/Frontend/payments.html
+++ b/Frontend/payments.html
@@ -2,52 +2,106 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Payments</title>
-  <link rel="stylesheet" href="CSS/STYLE.CSS" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Payments List</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Payments</h1>
-    <button id="showPaymentsFormBtn" class="btn btn-success">+ Add New Payment</button>
-    <table id="paymentsTable" class="table" style="width: 100%; margin-top: 20px;">
-      <thead>
-        <tr>
-          <th>Payment ID</th>
-          <th>Order ID</th>
-          <th>Amount</th>
-          <th>Method</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
 
-  <div id="paymentsFormSection" class="d-none">
-    <form id="paymentsForm">
-      <h2 id="paymentsFormTitle">Insert Payment</h2>
-      <div class="row">
-        <div class="col">
-          <label>Order ID</label>
-          <input type="number" id="order_id" class="form-control" required />
-        </div>
-        <div class="col">
-          <label>Amount</label>
-          <input type="number" id="amount" class="form-control" required />
-        </div>
-        <div class="col">
-          <label>Method</label>
-          <input type="text" id="method" class="form-control" required />
-        </div>
-      </div>
-      <br/>
-      <div class="text-center">
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <button type="button" id="cancelPaymentsFormBtn" class="btn btn-secondary">Cancel</button>
-      </div>
-    </form>
-  </div>
+  <h1>Payments List</h1>
 
-  <script src="JS/payments.js"></script>
+  <form id="addPaymentForm" onsubmit="addNewPayment(event)">
+    <input type="number" id="OrderID" placeholder="Order ID" required />
+    <input type="number" step="0.01" id="Amount" placeholder="Amount" required />
+    <input type="text" id="Method" placeholder="Payment Method" required />
+    <button type="submit">Add</button>
+  </form>
+
+  <div id="loading" class="loading">Loading Data...</div>
+  <div id="error" class="error" style="display:none;"></div>
+
+  <table id="paymentTable" style="display:none;">
+    <thead>
+      <tr>
+        <th>Payment ID</th>
+        <th>Order ID</th>
+        <th>Amount</th>
+        <th>Method</th>
+      </tr>
+    </thead>
+    <tbody id="paymentBody"></tbody>
+  </table>
+
+  <script>
+    const getPaymentsAPI = "https://musical-robot-q7xpp4j9xjwxc4gjj-5000.app.github.dev/getData/payments";
+
+    async function fetchPayments() {
+      const loadingEl = document.getElementById('loading');
+      const errorEl = document.getElementById('error');
+      const table = document.getElementById('paymentTable');
+      const tbody = document.getElementById('paymentBody');
+
+      try {
+        loadingEl.style.display = 'block';
+        errorEl.style.display = 'none';
+        table.style.display = 'none';
+
+        const response = await fetch(getPaymentsAPI);
+        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+
+        const payments = await response.json();
+        tbody.innerHTML = '';
+
+        payments.forEach(p => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${p.id}</td>
+            <td>${p.order_id}</td>
+            <td>₨${parseFloat(p.amount).toFixed(2)}</td>
+            <td>${p.method}</td>
+          `;
+          tbody.appendChild(tr);
+        });
+
+        loadingEl.style.display = 'none';
+        table.style.display = 'table';
+      } catch (err) {
+        loadingEl.style.display = 'none';
+        errorEl.style.display = 'block';
+        errorEl.textContent = 'Failed to load payments: ' + err.message;
+      }
+    }
+
+    fetchPayments();
+
+    async function addNewPayment(event) {
+      event.preventDefault();
+
+      const order_id = document.getElementById('OrderID').value;
+      const amount = document.getElementById('Amount').value;
+      const method = document.getElementById('Method').value;
+
+      if (parseFloat(amount) <= 0) {
+        alert("Amount must be positive.");
+        return;
+      }
+
+      try {
+        await fetch('https://musical-robot-q7xpp4j9xjwxc4gjj-5000.app.github.dev/addPayment', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ order_id, amount, method })
+        });
+
+        fetchPayments();
+        document.getElementById('addPaymentForm').reset();
+      } catch (err) {
+        console.error("Error adding payment:", err);
+      }
+    }
+  </script>
+
 </body>
 </html>
